--- a/example/css/core.sass
+++ b/example/css/core.sass
@@ -11,6 +11,7 @@ $grid_type: fluid
 
 #content
   +column(16)
+  background-color: #f5f5f5
   
   .boxes
     +column(16, 16)
@@ -25,6 +26,7 @@ $grid_type: fluid
 #sidebar
   +column(8)
   +last
+  background-color: #ccc
   
   .boxes
     +column(8, 8)
